// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imported css with import: mappings 1`] = `"AAAA;EACE,UAAU;AACZ;;ACAA;EACE,UAAU;AACZ"`;

exports[`imported css with import: sourcesContent 1`] = `
Array [
  ".be-imported {
  color: red;
}
",
  "@import '@/be-imported.css';

.imported-with-import {
  color: red;
}
",
]
`;

exports[`imported css: mappings 1`] = `"AAAA,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AACX,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AACb,CAAC;"`;

exports[`imported css: sourcesContent 1`] = `
Array [
  ".imported {
  color: red;
}
",
]
`;

exports[`imported less: mappings 1`] = `"AACE;EACE"`;

exports[`imported less: sourcesContent 1`] = `
Array [
  ".imported {
  &-less {
    color: red;
  }
}
",
]
`;

exports[`imported sass module: mappings 1`] = `"AACE;EACE"`;

exports[`imported sass module: sourcesContent 1`] = `
Array [
  ".imported
  &-sass-module
    color: red
",
]
`;

exports[`imported sass: mappings 1`] = `"AACE;EACE"`;

exports[`imported sass: sourcesContent 1`] = `
Array [
  ".imported
  &-sass
    color: red
",
]
`;

exports[`imported stylus: mappings 1`] = `"AACE;EACE,WAAM"`;

exports[`imported stylus: sourcesContent 1`] = `
Array [
  ".imported
  &-stylus
    color red
",
]
`;

exports[`linked css with import: mappings 1`] = `"AAAA;EACE,UAAU;AACZ;;ACAA;EACE,UAAU;AACZ"`;

exports[`linked css with import: sourcesContent 1`] = `
Array [
  ".be-imported {
  color: red;
}
",
  "@import '@/be-imported.css';

.linked-with-import {
  color: red;
}
",
]
`;
